added image to search results, restyled artist-search-results page, added button for albums

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -10,5 +10,12 @@
     border-color: black;
     border-style: solid;
     gap: 10px;
+
+}
+
+#indResult {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
 }
 
