--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,11 @@
 <div class="container">
+    <div id="searchContainer">
     <div id="search">
-        <form action="/artist-search" method="GET">
+        <form id="form" action="/artist-search" method="GET">
         <input type="text" name="artistSearch">
             <br /><button type="submit">Search for an Artist</button>
         </form>
-        <h1>Test
+</div>
 
-        </h1>
     </div>
 </div>
