--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,49 @@
+body {
+    font-family:Arial, Helvetica, sans-serif
+}
+
 .container {
-    background-image: "/public/images/spotify-background.jpeg";
+    background: url("/images/spotify-background.jpeg");
+  
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+}
+#search {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 200px;
+    width: 500px;
+
+}
+#searchContainer {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    background-color: rgba(0, 0, 0, 0.3);
+    height: 150px;
+    width: 500px;
+}
+
+#form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+#form input {
+    width: 200px;
+}
+
+#form button {
+    background-color: red;
+    border-color: red;
+    border-radius: 5px;
+    padding: 5px 20px 5px 20px;
+    color: white;
 }
 
 #results {
@@ -10,12 +54,78 @@
     border-color: black;
     border-style: solid;
     gap: 10px;
+    
 
 }
 
 #indResult {
     display: flex;
     flex-direction: column;
+    width: 300px;
+    height: 400px;
+    
+}
+
+
+
+.indResultBottom {
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#viewAlbums {
+    background-color: red;
+    border: 0px;
+    padding: 3px;
+    width: 150px;
+    align-self: center;
+}
+
+.viewAlbumsButton {
+    background-color: red;
+    text-decoration: none;
+    color: white;
+    padding: 5px;
+    margin-top: 5px;
+    border-radius: 5px;
+}
+
+.bandName {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+}
+
+#tracksHeading tr{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 96vw;
+    background-color: gray;
+    height: 100px;
+    color: white;
+    font-weight: 700;
+    
+}
+
+#listen {
+    text-align: center;
     width: 200px;
 }
+
+#tracksTable {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#tracksTable tr {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
 
